<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".Activity.TicketActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_white" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ticket Detail"
                    android:textColor="@color/darkBlue"
                    android:textSize="22sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/backBtn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_bg"
                android:layout_margin="24dp"


                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_margin="16dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="110dp"

                        android:layout_height="30dp"
                        android:text="@string/upcoming_trip"
                        android:textColor="@color/purple"
                        android:textStyle="bold"
                        android:background="@drawable/light_purple_bg"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Order Id:987654"



                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/pic"
                    android:layout_margin="16dp"
                    app:shapeAppearanceOverlay="@style/roundedCorner"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/titleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/darkBlue"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/darkBlue"

                    android:text="@string/show_the_ticket_to_your_guide_before_departure" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/guestTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"

                        android:text="0"
                        android:textStyle="bold"

                        android:textColor="@color/darkBlue"
                        app:layout_constraintStart_toStartOf="@+id/textView33"
                        app:layout_constraintTop_toBottomOf="@+id/textView33" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/tour_guide"
                        android:textColor="@color/darkBlue"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/total_guest"

                        android:textColor="@color/darkBlue"
                        app:layout_constraintStart_toStartOf="@+id/timeTxt"
                        app:layout_constraintTop_toBottomOf="@+id/timeTxt" />

                    <TextView
                        android:id="@+id/timeTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="0"
                        android:textStyle="bold"

                        android:textColor="@color/darkBlue"
                        app:layout_constraintStart_toStartOf="@+id/textView31"
                        app:layout_constraintTop_toBottomOf="@+id/textView31" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="48dp"
                        android:text="@string/Time"

                        android:textColor="@color/darkBlue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/durationTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="-"
                        android:textStyle="bold"
                        android:textColor="@color/darkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView28" />

                    <TextView
                        android:id="@+id/timeTxttourGuideTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="-"
                        android:textColor="@color/darkBlue"

                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView17" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/tip_duration"

                        android:textColor="@color/darkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/timeTxttourGuideTxt" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/stroke_bg"

                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        app:shapeAppearanceOverlay="@style/roundedFullCorner"
                        android:id="@+id/profile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Tour Build"
                        android:textColor="@color/darkBlue"

                        app:layout_constraintStart_toEndOf="@+id/profile"
                        app:layout_constraintTop_toTopOf="@+id/profile" />

                    <TextView
                        android:id="@+id/tourGuideNameTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textColor="@color/darkBlue"
                        android:textStyle="bold"

                        app:layout_constraintBottom_toBottomOf="@+id/profile"
                        app:layout_constraintStart_toStartOf="@+id/textView35" />

                    <ImageView
                        android:id="@+id/callBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/profile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/profile"
                        app:srcCompat="@drawable/call" />

                    <ImageView
                        android:id="@+id/messageBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/callBtn"
                        app:layout_constraintEnd_toStartOf="@+id/callBtn"
                        app:layout_constraintTop_toTopOf="@+id/callBtn"
                        app:srcCompat="@drawable/message" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/dash_line" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/barcode" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button2"
                    style="@android:style/Widget.Button"
                    android:layout_margin="16dp"
                    android:background="@drawable/purple_bg"
                    android:textColor="@color/white"
                    android:textSize="20sp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/download_ticket" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>